Update with all Paulo's suggestions

--- a/Appendix/Appendix_PrivatePhylogenetirTrees_Code.tex
+++ b/Appendix/Appendix_PrivatePhylogenetirTrees_Code.tex
@@ -13,7 +13,7 @@ The boolean circuit that represents the Jukes-Cantor distance receives as inputs
 
 As we saw in the main text, the hamming distance between two binary strings can then be easily computed by XORing them and counting the number of 1’s. This last operation is commonly called $\texttt{popcount}$. We cannot directly apply this approach because our sequences are in fact four-based sequences. In fact, our version of the $\texttt{popcount}$ function is only interested in computing the number of 2-bit elements that are different between both sequences.
 
-We follow a tailored divide-and-conquer technique. The original technique is described by Henry Warren in his book “Hacker’s Delight”, chapter 5 \citep{W12}. In summary, the original technique starts by counting in parallel the number of 1’s inside each 2-bit block and saves it in 2-bit blocks. Then, it adds two 2-bit blocks and saves the result in a 4-bit block. It continues until we get the final sum. If we follow directly this approach we might run into wrong results as described in the main text. For our case, instead of counting the number of 1’s inside every 2-bit block, we only care if there is one element 1 inside each 2-bit block. This simply indicates that the elements at that site are different. This is achieved by applying an $\texttt{OR}$ operation (represented by $\texttt{|}$) to the bits inside each 2-bit block (Figure~\ref{fig:jc_cbmc-gc}, line $14$). For 4-bit blocks and above we follow the same recipe of the original divide-and-conquer technique. 
+We follow a tailored divide-and-conquer technique. The original technique is described by Henry Warren in his book “Hacker’s Delight”, Chapter 5 \citep{W12}. In summary, the original technique starts by counting in parallel the number of 1’s inside each 2-bit block and saves it in 2-bit blocks. Then, it adds two 2-bit blocks and saves the result in a 4-bit block. It continues until we get the final sum. If we follow directly this approach we might run into wrong results as described in the main text. For our case, instead of counting the number of 1’s inside every 2-bit block, we only care if there is one element 1 inside each 2-bit block. This simply indicates that the elements at that site are different. This is achieved by applying an $\texttt{OR}$ operation (represented by $\texttt{|}$) to the bits inside each 2-bit block (Figure~\ref{fig:jc_cbmc-gc}, line $14$). For 4-bit blocks and above we follow the same recipe of the original divide-and-conquer technique. 
 
 The main function that computes the Hamming weight between two nucleotide sequences $\texttt{INPUT\_A}$ and $\texttt{INPUT\_B}$ is defined by the function $\texttt{mpc\_main}$, line $21$. It outputs the inverse of the hamming weight: $\texttt{total/distance}$ line $37$. Since we know the hamming weight lies between $0$ and $1$, it renders smaller circuits to use the native integer division operator, $/$, from the CBMC-GC tool and then invert the output after the Yao computation. Otherwise, we would need a fixed precision representation to output decimal numbers.
 
@@ -101,7 +101,7 @@ Finally, $r_H(\cdot, \cdot)=d_H(\cdot, \cdot)/n$ is the relative Hamming distanc
 
 
  Let us start by proving property 1. of Lemma \ref{lemma:wrole_dishonest_bob}.
-After the first step of the protocol $\mathcal{\pi}^n_{\text{RWOLE}}$ (Figure \ref{fig:wrole}),  the generated state is $\rho_{X^m E}$, where $E$ is an auxiliary quantum system that Bob holds. Without loss of generality we assume that $\rho_{X^m E} = \ketbra{\phi_{X^m E}}$,   i.e, it is a pure state\footnote{Otherwise, we purify it and carry the purification system along with $E$.}. If Bob is honest, we have that $\ket{\phi_{X^m E}}=\ket{e^{\boldsymbol{x}}_{\boldsymbol{r}}}\otimes \ket{\psi_{E}}$, i.e.,   Bob's auxiliary quantum system $E$ is not entangled to the states that he sends to Alice.  
+After the first step of the protocol $\mathcal{\pi}^n_{\text{RWOLE}}$ (Figure \ref{fig:wrole}),  the generated state is $\rho_{X^m E}$, where $E$ is an auxiliary quantum system that Bob holds. Without loss of generality we assume that $\rho_{X^m E} = \ketbra{\phi_{X^m E}}$,   i.e, it is a pure state.\footnote{Otherwise, we purify it and carry the purification system along with $E$.} If Bob is honest, we have that $\ket{\phi_{X^m E}}=\ket{e^{\boldsymbol{x}}_{\boldsymbol{r}}}\otimes \ket{\psi_{E}}$, i.e.,   Bob's auxiliary quantum system $E$ is not entangled to the states that he sends to Alice.  
 
 The \textit{Test Phase} of the protocol is used to guarantee that the real state is close to an ideal state that satisfies the properties 1. and 2. of Lemma \ref{lemma:wrole_dishonest_bob}. Let $\boldsymbol{r'}$ be the vector whose components are Alice's  outcomes when measuring the state of  $X^m$  in the committed bases $\bm{x}$, and let $\mathcal{T}$ be the random variable associated to the set of indexes $T$  of size $t n$. We can consider the state:
 \begin{equation}
