--- a/References/References.bib
+++ b/References/References.bib
@@ -4621,7 +4621,55 @@ author = {J. Lawrence Carter and Mark N. Wegman},
       url = {https://eprint.iacr.org/2022/1774}
 }
 
+@InProceedings{PW08,
+author="Przydatek, Bartosz
+and Wullschleger, J{\"u}rg",
+editor="Aceto, Luca
+and Damg{\aa}rd, Ivan
+and Goldberg, Leslie Ann
+and Halld{\'o}rsson, Magn{\'u}s M.
+and Ing{\'o}lfsd{\'o}ttir, Anna
+and Walukiewicz, Igor",
+title="Error-Tolerant Combiners for Oblivious Primitives",
+booktitle="Automata, Languages and Programming",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="461--472",
+abstract="A robust combiner is a construction that combines several implementations of a primitive based on different assumptions, and yields an implementation guaranteed to be secure if at least some assumptions (i.e. sufficiently many but not necessarily all) are valid.",
+isbn="978-3-540-70583-3"
+}
 
+@article{DPV+12,
+  doi = {10.1137/100813683},
+  url = {https://doi.org/10.1137/100813683},
+  year = {2012},
+  month = jan,
+  publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
+  volume = {41},
+  number = {4},
+  pages = {915--940},
+  author = {Anindya De and Christopher Portmann and Thomas Vidick and Renato Renner},
+  title = {Trevisan{\textquotesingle}s Extractor in the Presence of Quantum Side Information},
+  journal = {{SIAM} Journal on Computing}
+}
+
+@InProceedings{KK10,
+author="Kasher, Roy
+and Kempe, Julia",
+editor="Serna, Maria
+and Shaltiel, Ronen
+and Jansen, Klaus
+and Rolim, Jos{\'e}",
+title="Two-Source Extractors Secure against Quantum Adversaries",
+booktitle="Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="656--669",
+abstract="We initiate the study of multi-source extractors in the quantum world. In this setting, our goal is to extract random bits from two independent weak random sources, on which two quantum adversaries store a bounded amount of information. Our main result is a two-source extractor secure against quantum adversaries, with parameters closely matching the classical case and tight in several instances. Moreover, the extractor is secure even if the adversaries share entanglement. The construction is the Chor-Goldreich [5] two-source inner product extractor and its multi-bit variant by Dodis et al. [9]. Previously, research in this area focused on the construction of seeded extractors secure against quantum adversaries; the multi-source setting poses new challenges, among which is the presence of entanglement that could potentially break the independence of the sources.",
+isbn="978-3-642-15369-3"
+}
 
 
 
