--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -12,8 +12,9 @@ I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo S
 
 \vfill
 \begin{center}\begin{footnotesize}
-I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/ 144806/2019 in the context of the Doctoral Program in the Information Security (IS).\\
-I also acknowledge support from SQIG (Security and Quantum Information Group) in the Instituto de Telecomunica\c{c}\~{o}es (IT), Lisbon, namely through UID/EEA/50008/2013. {\cv(CHECK THIS)}
+I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/144806/2019 in the context of the Doctoral Program in the Information Security (IS). I also acknowledge support from the European Regional Development Fund (FEDER) through the Competitiveness and
+Internationalization Operational Program (COMPETE 2020) under Award POCI-01-0247-FEDER-039728; in part by the Regional Operational Program of Lisbon, under the Project QuantumMining under Grant POCI-01-0145-FEDER-031826; and in part by AIT—Austrian Institute of Technology GmbH and 37 Further Beneficiaries of OpenQKD (Action QuGenome) under Project 857156 and Project SFRH/BD/144806/2019.
+
 \end{footnotesize}
 \end{center}
 
