--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -26,9 +26,9 @@ The second quantum revolution is upon us and quantum technology has advanced to 
 \item Improving security requirements and achieving information-theoretically secure protocols or those that require fewer computational assumptions;
 \item Developing new cryptographic primitives that were previously unattainable using classical techniques.
 \end{enumerate}
-While quantum key distribution (QKD) is the most well-known application of quantum cryptography, other cryptographic tasks such as bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09} also play important roles in this field.
+While quantum key distribution (QKD) is the most well-known application of quantum cryptography, other cryptographic tasks such as bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09} among others, also play important roles in this field.
 
-Also, the intrinsic randomness provided by quantum phenomena can be leveraged to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Importantly, there is a significant difference between classical and quantum OT from a security standpoint, as the latter can be achieved with only the assumption of the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT can be based solely on symmetric cryptography, requiring less security assumptions than classical OT. Furthermore, these quantum protocols often possess the desirable property of everlasting security, which guarantees information-theoretic security after the execution of the protocol \citep{U10}. This greatly improves the security of SMC protocols, allowing them to rely solely on symmetric cryptography and possess the important feature of everlasting security. With regards to the oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require additional assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
+Also, the intrinsic randomness provided by quantum phenomena can be leveraged to develop quantum communication protocols for oblivious transfer (OT) \cite{BBCS92}. Importantly, there is a significant difference between classical and quantum OT from a security standpoint, as the latter can be achieved with only the assumption of the existence of quantum-hard one-way functions \cite{GLSV21, BCKM21}. This means quantum OT requires less security assumptions than classical OT, as the latter cannot be based on one-way functions alone \cite{IR89, GKMRV00}. Furthermore, these quantum protocols often possess the desirable property of everlasting security, which guarantees information-theoretic security after the execution of the protocol \citep{U10}. This greatly improves the security of SMC protocols, allowing them to rely on symmetric cryptography and one-way functions, and to possess the important feature of everlasting security. With regards to the oblivious linear evaluation (OLE) primitive, it is known that it can be reduced to OT \cite{KOS16} through classical methods that do not require additional assumptions. Therefore, it seems natural to use quantum OT to generate quantum-secure OLE instances.
 
 
 \section*{Contributions} %Section - 1.2
