Include Armando comments

--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -15,7 +15,7 @@ The field of data mining and data analysis has seen significant advancements wit
 
 To address the privacy concerns outlined above, various privacy-enhancing technologies have been proposed, such as secure multiparty computation (SMC) \cite{Li2016, Armknecht2015, Yao82}. SMC enables a group of $n$ parties, denoted as $P_i$, to jointly compute a function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without revealing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal scenario, where each party $P_i$ sends their inputs to a separate, trusted third party, who then computes $f()$ and returns the corresponding output to each party.
 
-The research area of SMC has been greatly advanced with the development of various protocols and frameworks \cite{Goldreich87, Bendlin11, D12}. These protocols can be broadly classified into two categories: those based on boolean logic and those based on arithmetic logic. The efficiency and security of SMC protocols rely heavily on the efficiency and security of important cryptographic primitives, such as oblivious transfer (OT) for boolean-based protocols and oblivious linear evaluation (OLE) for arithmetic-based protocols \citep{Yao82, KOS16}. However, a fundamental limitation of these primitives is their reliance on public-key cryptography, as proven by Impagliazzo and Rudich \cite{IR99}. This dependence on public-key cryptography is a significant drawback in terms of both performance and security, as it requires more computational resources and is vulnerable to attacks from quantum computers, as demonstrated by Shor's algorithm \cite{Sho95}. To address these issues and ensure the safe deployment of SMC methods in the face of quantum computing, it is crucial to develop SMC methods that are secure against quantum attacks while maintaining state-of-the-art performance levels.
+The research area of SMC has been greatly advanced with the development of various protocols and frameworks \cite{Goldreich87, Bendlin11, D12}. These protocols can be broadly classified into two categories: those based on boolean circuits and those based on arithmetic circuits. The efficiency and security of SMC protocols rely heavily on the efficiency and security of important cryptographic primitives, such as oblivious transfer (OT) for boolean-based protocols and oblivious linear evaluation (OLE) for arithmetic-based protocols \citep{Yao82, KOS16}. However, a fundamental limitation of these primitives is their reliance on public-key cryptography, as proven by Impagliazzo and Rudich \cite{IR99}. This dependence on public-key cryptography is a significant drawback in terms of both performance and security, as it requires more computational resources and is vulnerable to attacks from quantum computers, as demonstrated by Shor's algorithm \cite{Sho95}. To address these issues and ensure the safe deployment of SMC methods in the face of quantum computing, it is crucial to develop SMC methods that are secure against quantum attacks while maintaining state-of-the-art performance levels.
 
 
 \section*{A quantum era}
