--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -115,7 +115,7 @@
 \vspace{0.5cm}\\
 \textbf{RNG} -- Random number generator.
 \vspace{0.5cm}\\
-\textbf{RSA} -- Public-key cryptosystem developed by Rivest, Shamir and Adleman.
+\textbf{RSA} -- Public-key cryptosystem developed by Rivest, Shamir and Adleman \cite{RSA78}.
 \vspace{0.5cm}\\
 \textbf{RWOLE} -- Random weak oblivious linear evaluation.
 \vspace{0.5cm}\\
