--- a/References.bib
+++ b/References.bib
@@ -2868,6 +2868,21 @@ isbn="978-3-540-46766-3"
     url="https://doi.org/10.1007/3-540-48969-X_9"
 }
 
+@article{RSA78,
+  title = {A method for obtaining digital signatures and public-key cryptosystems},
+  volume = {21},
+  ISSN = {1557-7317},
+  url = {http://dx.doi.org/10.1145/359340.359342},
+  DOI = {10.1145/359340.359342},
+  number = {2},
+  journal = {Communications of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Rivest,  R. L. and Shamir,  A. and Adleman,  L.},
+  year = {1978},
+  month = feb,
+  pages = {120–126}
+}
+
 
 
 
