--- a/Thesis_FrontCover.tex
+++ b/Thesis_FrontCover.tex
@@ -22,7 +22,7 @@
 Quantum Assisted Secure Multiparty Computation} \\
 
 \vspace{3cm}
-{\FontLn Manuel Batalha dos Santos} \\
+{\FontLn Manuel Maria Trigueiros Sampaio Batalha dos Santos} \\
 \vspace{2cm}
 
 \end{center}
@@ -39,14 +39,14 @@ Quantum Assisted Secure Multiparty Computation} \\
 
 {\FontMn Thesis specifically prepared to obtain the PhD Degree in} \\
 %\vspace{0.3cm}
-{\FontMn Mathematics} \\
+{\FontMn Information Security} \\
 %%previous spacing%%
 \vspace{1cm}
 %%current spacing%%
 %\vspace{1.5cm}
 {\FontLn Draft} \\
 \vspace{1cm}
-{\FontMb January 2023} \\
+{\FontMb December 2023} \\
 %
 \end{center}
 
