--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -3,17 +3,15 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{section}{Acknowledgements}
 
-I am deeply grateful to my advisors, Paulo Mateus and Armando Nolasco Pinto, for their guidance and support throughout the course of this research. Their expertise and insight have been invaluable in shaping the direction and outcome of this dissertation.
-
+I am deeply grateful to my advisors, Paulo Mateus and Armando Nolasco Pinto, for their guidance and support throughout the course of this research. Their expertise and insight have been invaluable in shaping the direction and outcome of this thesis.
 
 I am also grateful for the valuable contributions of my colleagues, who have provided me with valuable insights and knowledge throughout this research. Special recognition goes to Chrysoula Vlachou for her stimulating discussions and Pedro Branco for his expertise on the UC framework and other crypto-related topics. Their guidance and support have been instrumental in shaping this research and making this journey a success.
 
-I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão, who have been a constant source of support and encouragement throughout my research journey. As the Latin saying goes, "Ver\ae\ amiciti\ae\ sempitern\ae\ sunt" (Cicero, "De Amicitia"). I also want to express my deep gratitude to my family, particularly my wife Teresinha and my children Henrique and Helena, for their unwavering love and support. This dissertation is dedicated to them.
+I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão, who have been a constant source of support and encouragement throughout my research journey. As the Latin saying goes, "Ver\ae\ amiciti\ae\ sempitern\ae\ sunt" (Cicero, "De Amicitia"). I also want to express my deep gratitude to my family, particularly my wife Teresinha and my children Henrique and Helena, for their unwavering love and support. This thesis is dedicated to them.
 
 \vfill
 \begin{center}\begin{footnotesize}
-I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/144806/2019 in the context of the Doctoral Program in the Information Security (IS). I also acknowledge support from the European Regional Development Fund (FEDER) through the Competitiveness and
-Internationalization Operational Program (COMPETE 2020) under Award POCI-01-0247-FEDER-039728; in part by the Regional Operational Program of Lisbon, under the Project QuantumMining under Grant POCI-01-0145-FEDER-031826; and in part by AIT—Austrian Institute of Technology GmbH and 37 Further Beneficiaries of OpenQKD (Action QuGenome) under Project 857156 and Project SFRH/BD/144806/2019.
+I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/144806/2019 in the context of the Doctoral Program in the Information Security (IS). I also acknowledge support from the project QuantaGenomics funded within the QuantERA II Programme that has received funding from the European Union’s Horizon 2020 research and innovation programme under Grant Agreement No 101017733, and with funding organisations, The Foundation for Science and Technology – FCT (QuantERA/0001/2021), Agence Nationale de la Recherche - ANR, and State Research Agency – AEI; and in part by AIT—Austrian Institute of Technology GmbH and 37 Further Beneficiaries of OpenQKD (Project number 857156, Action QuGenome).
 
 \end{footnotesize}
 \end{center}
