--- a/References/References.bib
+++ b/References/References.bib
@@ -4671,5 +4671,20 @@ abstract="We initiate the study of multi-source extractors in the quantum world.
 isbn="978-3-642-15369-3"
 }
 
+@article{RSA78,
+  title = {A method for obtaining digital signatures and public-key cryptosystems},
+  volume = {21},
+  ISSN = {1557-7317},
+  url = {http://dx.doi.org/10.1145/359340.359342},
+  DOI = {10.1145/359340.359342},
+  number = {2},
+  journal = {Communications of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Rivest,  R. L. and Shamir,  A. and Adleman,  L.},
+  year = {1978},
+  month = feb,
+  pages = {120–126}
+}
+
 
 
