--- a/Submission Documents/Abstract_Resumo_ResumoAlargado.tex
+++ b/Submission Documents/Abstract_Resumo_ResumoAlargado.tex
@@ -4,69 +4,73 @@
 \begin{document}
 	
 
-\noindent \textbf{Title:} Quantum walks in cryptography and finite-temperature topological phase transitions
+\noindent \textbf{Title:} Quantum Assisted Secure Multiparty Computation
 
 \vspace{2\baselineskip}
 
 \underline{\textbf{Abstract}}\\
-\noindent Quantum cryptography is an active area of research, since it was shown that the security of some of the classical cryptosystems currently used can be compromised by adversaries with access to quantum computers. In the first part of this thesis, we propose new secure quantum cryptosystems based on quantum walks, which have been proved very useful in several quantum computation tasks. In particular, we design a secure quantum public-key cryptosystem, as an alternative to the classical counterparts, whose security can be jeopardised by quantum adversaries. Moreover, we propose three new quantum key distribution protocols and analyse their security and robustness properties.
+\noindent Quantum cryptography explores quantum physics properties to enhance cryptographic methods beyond classical approaches. Quantum key distribution (QKD) has been a major focus, but advancements in two-party primitives like quantum oblivious transfer (QOT) also hold promise for quantum-safe computation. This thesis starts by reviewing the literature about QOT, covering proposed protocols, security requirements, impossibility results, and scrutinizing conditions for QOT's full quantum safety.
 
-The design of long-term stable quantum memories is currently one of the biggest technological challenges towards the construction of operational and scalable quantum computers, and their existence or absence has serious implications in both classical and quantum cryptography. In the second part of this thesis, we study the finite-temperature behaviour of systems exhibiting topological order, as they possess some unique properties which could be used to construct quantum memories. By means of the fidelity between two quantum states and the Uhlmann parallel transport condition in the space of the purifications of density matrices, we investigate the existence of topological phase transitions at finite temperatures. We also probe the robustness of the edge states on the boundary between two different symmetry-protected topological phases with respect to the temperature. This analysis shows that there exist no thermal phase transitions and the topological features, present at zero temperature, are gradually smeared out as the temperature increases. Our study of the Majorana modes (edge states of topological superconductors) at low but finite temperatures, suggests that they could be used to achieve realistic quantum memories.
+Oblivious transfer (OT) plays a crucial role in secure multiparty computation (SMC), promising advancements in data analysis and computation privacy. The thesis assesses quantum OT's complexity against two leading classical OT protocols, shedding light on potential benefits and limitations for SMC security and efficiency.
 
-We also performed the same analysis for the effective Hamiltonians resulting from quantum walk protocols that have been shown to simulate symmetry-protected topological phases. The results that we obtained are consistent with the previous, indicating the absence of thermally-driven phase transitions. Moreover, in this case, our analysis revealed the existence of finite-temperature parameter-driven phase transitions.
+Expanding on the theoretical analysis of quantum and classical oblivious transfer, the thesis integrates both into a secure multiparty computation (SMC) system for genomic analysis. Using quantum cryptographic protocols, the proposed system enhances privacy in computing a phylogenetic tree from private genome sequences. Three quantum cryptographic protocols are integrated to fortify security against quantum attacks. We include a complexity analysis, a security proof, and detailed implementation insights. Evaluation against a classical-only solution shows similar execution times, with the quantum-assisted approach introducing a time overhead in the oblivious key management system.
 
-Finally, we investigated the existence of finite-temperature phase transitions in topological systems out of equilibrium. So far, there exist two different approaches to infer the possibility of phase transitions  at finite temperatures for such systems, which were giving opposite predictions. We analytically derived the relevant quantities and showed the origin of such different behaviours. Moreover, we argued which is the most suitable approach that better captures the many-body nature of topological systems and can be used in realistic implementations.
+The thesis introduces the first quantum protocol for oblivious linear evaluation, a generalized form of oblivious transfer. In this scenario, distrustful parties, Alice and Bob, collaboratively compute a linear function without disclosing their inputs. While classical methods rely on oblivious transfer, the thesis unveils a novel quantum protocol independent of quantum oblivious transfer. The protocol employs high-dimensional quantum states to compute the linear function on Galois fields, extending from semi-honest to dishonest settings using a commit-and-open strategy. Security is rigorously proven in the framework of quantum universal composability, and the protocol is generalized for vector oblivious linear evaluation, enhancing efficiency.
 
 \vfill
 
 \begin{flushleft}
-\textbf{Key-words:} quantum cryptography, quantum walks, quantum memories, topological phase transitions,  edge states
+\textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious
+linear evaluation, secure multiparty computation.
 \end{flushleft}
+
+
 \newpage
-\noindent \textbf{T\'{i}tulo:} Passeios qu\^{a}nticos em criptografia e transi\c{c}\~{o}es de fase topol\'{o}gicas a temperature finita\\
-\textbf{Nome:} Chrysoula Vlachou\\
-\textbf{Doutoramento em:} F\'{i}sica\\
+
+
+\noindent \textbf{T\'{i}tulo:} Computa\c{c}\~{a}o Multipartid\'{a}ria Segura com Assist\^{e}ncia Qu\^{a}ntica\\
+\textbf{Nome:} Manuel Maria Trigueiros Sampaio Batalha dos Santos\\
+\textbf{Doutoramento em:} Seguran\c{c}a da Informa\c{c}\~{a}o\\
 \textbf{Orientador:} Paulo Alexandre Carreira Mateus\\
-\textbf{Co-Orientador:} Nikola Paunkovi\'c\\
+\textbf{Co-Orientador:} Armando Nolasco Pinto\\
 \vspace{2\baselineskip}
 
 \underline{\textbf{Resumo}}\\
-A criptografia qu\^{a}ntica \'{e} uma das mais ativas \'{a}reas de investiga\c{c}\~{a}o, uma vez que se mostrou que a segurança de criptosistemas cl\'{a}ssicos atualmente em utiliza\c{c}\~{a}o ficam comprometidos face a advers\'{a}rios com acesso a computadores qu\^{a}nticos. Na primeira parte desta tese, propomos novos e seguros criptosistemas qu\^{a}nticos baseados em passeios qu\^{a}nticos. Estes \'{u}ltimos t\^{e}m-se vindo a revelar de grande utilidade para diversas tarefas de computa\c{c}\~{a}o qu\^{a}ntica. Em particular, apresentamos um criptosistema qu\^{a}ntico de chave p\'{u}blica seguro, como alternativa aos an\'{a}logos cl\'{a}ssicos, cuja seguran\c{c}a cai por terra face a advers\'{a}rios qu\^{a}nticos. Propomos ainda tr\^{e}s novos protocolos qu\^{a}nticos de distribui\c{c}\~{a}o de chave e analisamos as suas propriedades de seguran\c{c}a e robustez.
-A cria\c{c}\~{a}o de mem\'{o}rias qu\^{a}nticas est\'{a}veis de longa dura\c{c}\~{a}o é hoje em dia um dos maiores obst\'{a}culos tecnol\'{o}gicos na constru\c{c}\~{a}o de computadores qu\^{a}nticos escal\'{a}veis, e a sua exist\^{e}ncia ou n\~{a}o tem consequ\^{e}ncias s\'{e}rias em ambas a criptografia cl\'{a}ssica e a criptografia qu\^{a}ntica. Na segunda parte desta tese, estudamos o comportamento, a temperatura finita, de sistemas exibindo ordem topol\'{o}gica, j\'{a} que possuem propriedades \'{u}nicas que podem permitir a constru\c{c}\~{a}o de mem\'{o}rias qu\^{a}nticas. Utilizando a fidelidade entre dois estados qu\^{a}nticos e a condi\c{c}\~{a}o de transporte paralelo de Uhlmann no espa\c{c}o das purifica\c{c}\~{o}es de matrizes densidade, investigamos a exist\^{e}ncia de transi\c{c}\~{o}es de fase topol\'{o}gicas a temperatura finita. Provamos ainda a robustez, em fun\c{c}\~{a}o da temperatura, dos estados de fronteira entre duas fases topol\'{o}gicas distintas. Esta an\'{a}lise mostra que n\~{a}o existem transi\c{c}\~{o}es t\'{e}rmicas de fase e que as propriedades topol\'{o}gicas, presentes a temperatura zero, desaparecem gradualmente \`{a} medida que a temperatura sobe. O nosso estudo dos modos de Majorana (estados de fronteira de supercondutores topol\'{o}gicos), a temperatura baixa mas finita, sugere que podem ser realisticamente utilizados para produzir mem\'{o}rias qu\^{a}nticas.
-Aplicamos ainda a mesma an\'{a}lise aos Hamiltonianos efetivos provenientes de protocolos de passeios qu\^{a}nticos que se sabe simularem fases topol\'{o}gicas. Os resultados obtidos condizem com os anteriores, indicando a n\~{a}o exist\^{e}ncia de transi\c{c}\~{o}es t\'{e}rmicas de fase. Para mais, neste caso, a nossa an\'{a}lise revela a exist\^{e}ncia de transi\c{c}\~{o}es param\'{e}tricas de fase a temperatura finita, devido \`{a} periodicidade temporal dos protocolos de passeios qu\^{a}nticos.
-Finalmente, investigamos a exist\^{e}ncia de transi\c{c}\~{o}es de fase a temperatura finita em sistemas topol\'{o}gicos fora de equil\'{i}brio. Ainda hoje existem duas formas de inferir a possibilidade de transi\c{c}\~{o}es de fase a temperatura finita para tais sistemas, que levam a resultados contradit\'{o}rios. Derivamos analiticamente as quantidades em causa e identificamos a origem do paradoxo. Discutimos ainda qual dos m\'{e}todos melhor captura a natureza multi-corporal de sistemas topol\'{o}gicos e pode ser utilizado em implementa\c{c}\~{o}es reais.
+A criptografia quântica explora as propriedades da física quântica para robustecer os métodos criptográficos para além das abordagens clássicas. A distribuição quântica de chaves (QKD) tem sido um foco importante, mas os avanços em primitivas de duas participantes, como a transferência quântica oblívia (QOT), também oferecem desenvolvimentos para a computação segura quântica. Esta tese começa por apresentar uma revisão da literatura sobre QOT, abrangendo protocolos propostos, requisitos de segurança, resultados de impossibilidade e examinando condições para a segurança da QOT.
+
+A transferência oblívia (OT) desempenha um papel crucial na computação segura multipartidária (SMC), prometendo avanços na análise de dados e privacidade na computação. A tese avalia a complexidade da OT quântica em comparação com dois protocolos OT clássicos, lançando luz sobre benefícios e limitações potenciais para a segurança e eficiência da SMC.
+
+Expandindo a análise teórica da transferência oblívia quântica e clássica, a tese integra ambas num sistema de computação segura multipartidária para análise de genoma. Usando protocolos criptográficos quânticos, o sistema proposto melhora a privacidade do calculo de uma árvore filogenética a partir de sequências privadas de genoma. Três protocolos criptográficos quânticos são integrados para fortalecer a segurança contra ataques quânticos. Incluímos uma análise de complexidade, uma prova de segurança e detalhes da implementação. A avaliação do sistema quântico em comparação com uma solução exclusivamente clássica mostra tempos de execução semelhantes, com a abordagem quântica introduzindo um aumento de tempo devido ao sistema de gestão de chaves oblívias.
+
+A tese apresenta o primeiro protocolo quântico para avaliação linear oblívia, uma forma generalizada de transferência oblívia. Nesse cenário, as dua partes, Alice e Bob, calculam colaborativamente uma função linear sem revelar as suas entradas. Enquanto os métodos clássicos dependem da transferência oblívia, a tese propõe um novo protocolo quântico independente da transferência quântica oblívia. O protocolo utiliza estados quânticos de alta dimensão para calcular a função linear em corpos de Galois, estendendo-se de configurações semi-honestas para desonestas usando uma estratégia de compromisso e abertura. A segurança é rigorosamente comprovada no contexto da composabilidade universal quântica, e o protocolo é generalizado para avaliação linear oblívia de vetores, melhorando a eficiência.
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, passeios qu\^{a}nticos, mem\'{o}rias qu\^{a}nticas, transi\c{c}\~{o}es de fase topol\'{o}gicas, estados de fronteira
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
 \end{flushleft}
+
+
 \newpage
-\noindent\textbf{T\'itulo:} Passeios qu\^{a}nticos em criptografia e transi\c{c}\~{o}es de fase topol\'{o}gicas a temperatura finita\\
+
+
+\noindent\textbf{T\'itulo:} Computa\c{c}\~{a}o Multipartid\'{a}ria Segura com Assist\^{e}ncia Qu\^{a}ntica\\\\
 
 \noindent\underline{\textbf{Resumo alargado em Portugu\^{e}s}}\\
-Na primeira parte desta tese, apresentamos o nosso trabalho em criptografia qu\^{a}ntica baseada em passeios  qu\^{a}nticos. Propomos um novo e seguro sistema qu\^{a}ntico de chave p\'{u}blica, no qual a chave p\'{u}blica utilizada para a encripta\c{c}\~{a}o de mensagens \'{e} um estado qu\^{a}ntico gerado por um passeio qu\^{a}ntico. Uma vez que a seguran\c{c}a de muitos dos sistemas de chave p\'{u}blica cl\'{a}ssicos atualmente utilizados fica comprometida face a advers\'{a}rios com acesso a computadores qu\^{a}nticos, cremos que o nosso protocolo oferece uma alternativa \'{u}til para as comunica\~{c}\~{o}es qu\^{a}nticos emergentes. Para mais, a nossa proposta apresenta uma melhoria em rela\c{c}\~{a}o a propostas anteriores, em que a chave p\'{u}blica \'{e} gerada via rota\c{c}\~{o}es de qubits, um de cada vez, em estados separ\'{a}veis. Os estados resultantes de um passeio qu\^{a}ntico s\~{a}o, em geral, estados entrela\c{c}ados, pelo que uma terceira parte que escute a comunica\c{c}\~{a}o necessita, em princ\'{i}pio, de aplicar opera\c{c}\~{o}es substancialmente mais complexas para inferir a chave privada e/ou a mensagem. Consequentemente, a seguran\c{c}a, em termos pr\'{a}ticos, do nosso protocolo \'{e} maior.
 
-Utilizamos ainda passeios qu\^{a}nticos para desenhar e analisar novos protocolos seguros de distribui\c{c}\~{a}o qu\^{a}ntica de chaves. Nessa perspetiva, propomos dois novos protocolos de distribui\c{c}\~{a}o qu\^{a}ntica de chaves, em que as partes trocam chaves geradas a partir dos estados obtidos de certos passeios qu\^{a}nticos para establecer uma chave sim\'{e}trica que poder\~{a}o utilizar para a troca de mensagens cifradas ou para fins de autentica\c{c}\~{a}o. Tamb\'{e}m apresentamos uma varia\c{c}\~{a}o semi-qu\^{a}ntica de distribui\c{c}\~{a}o qu\^{a}ntica de chaves, em que uma das partes pode utilizar exclusivamente opera\c{c}\~{o}es cl\'{a}ssicas. Mostramos que este protocolo, que pode ser considerado mais pr\'{a}tico j\'{a} que necessita de menos hardware qu\^{a}ntico, \'{e} robusto contra advers\'{a}rios que escutem ou manipulem a comunica\c{c}\~{a}o. De facto, se um advers\'{a}rio tentar interferir, ser\'{a} detetado pelas partes leg\'{i}timas, que poder\~{a}o abortar o protocolo. At\'{e} ao momento, a distribui\c{c}\~{a}o qu\^{a}ntica de chaves \'{e} a instância mais pr\'{a}tica e segura de criptografia qu\^{a}ntica, e ser\'{a} portanto de interesse estudar, um futuro, implementa\c{c}\~{o}es reais das nossas propostas te\'{o}ricas. Em particular, poder-se-\'{a} fazer uma an\'{a}lise detalhada das diversas estrat\'{e}gias de ataque que um terceiro possa ter na presen\c{c}a de ru\'{i}do, tal como se poder\'{a} adaptar os ataques e defesas gen\'{e}ricos que apresentamos para o caso de implementa\c{c}\~{o}es espec\'{i}ficas. Nesta linha, mostramos que o nosso protocolo de distribui\c{c}\~{a}o qu\^{a}ntica de chaves unidirecional tolera bastante ru\'{i}do devido \'{a} alta dimens\~{a}o do espa\c{c}o de posi\c{c}\~{o}es, o que vai de encontro a v\'{a}rios estudos recentes. Assim, a aplica\c{c}\~{a}o de passeios qu\^{a}nticos para a distribui\c{c}\~{a}o qu\^{a}ntica de chaves revela-se ser muito promissor para aplica\c{c}\~{o}es pr\'{a}ticas.
+A criptografia quântica é o campo da criptografia que explora as propriedades quânticas da matéria. Geralmente, visa desenvolver primitivas fora do alcance da criptografia clássica e melhorar as implementações clássicas existentes. Embora grande parte do trabalho neste campo se foque na distribuição de chaves quânticas (\textit{quantum key distribution}, QKD), também têm existido desenvolvimentos cruciais para a compreensão e desenvolvimento de outras primitivas criptográficas, como a transferência oblívia quântica (\textit{quantum oblivious transfer}, QOT). Pode-se mostrar a semelhança entre a estrutura de aplicação das primitivas QKD e QOT. Assim como os protocolos QKD permitem comunicação com segurança quântica, os protocolos QOT permitem computação com segurança quântica. No entanto, as condições sobre as quais o QOT é totalmente seguro têm sido sujeitas a um intenso estudo. 
 
+Nesta tese, começamos por fazer um levantamento do trabalho desenvolvido em torno do conceito de OT dentro da criptografia quântica teórica. A nossa análise é centrada no uso the chaves oblívias e concentramo-nos em alguns protocolos propostos e nos seus requisitos de segurança. Analisamos o perigo posto por técnicas quânticas de hacking e apresentamos um avaliação de medidas práticas e teóricas de modo a mitigar esses ataques. Por último, também revisitamos os resultados de impossibilidade desta primitiva e discutimos vários modelos quânticos de segurança sobe os quais é possível provar a segurança do QOT.
 
+A aplicação mais famosa do OT está no domínio da computação multipartidária segura (\textit{secure multiparty computation}, SMC). Esta tecnologia tem o potencial de ser disruptiva nas áreas de análise e computação de dados. Esta permite que vários participantes calculem um certa função, preservando a privacidade dos seus dados. No entanto, a maior parte da segurança e eficiência do protocolos SMC dependem da segurança e eficiência do OT.  Por esta razão, fazemos uma comparação detalhada entre a complexidade da QOT baseada em chaves oblívias e dois dos protocolos OT clássicos mais rápidos (ALSZ15 and KOS15). O protocol QOT utilizado para a comparação com a abordagem clássica resulta de uma optimização por nós proposta da versão BBCS. Concluímos que ambos os protocolos clássicos (ALSZ15 and KOS15) têm uma complexidade de computação e comunicação superiores à versão optimizada de QOT.
 
-Em suma, a contribui\c{c}\~{a}o mais relevante do nosso trabalho \'{e} o facto de introduzirmos, pelo que nos parece ser a primeira vez, a utiliza\c{c}\~{a}o de passeios qu\^{a}nticos em criptografia assim\'{e}trica e distribui\c{c}\~{a}o de chaves, e a prova de que muitas das propriedades dos passeios se traduzem em propriedades significativas de seguran\c{c}a dos protocolos criptogr\'{a}ficos. No seguimento deste trabalho, seria particularmente relevante estudar a possibilidade de criar protocolos criptogr\'{a}ficos diferentes, tais como transfer\^{e}ncia obl\'{i}via e esquemas de compromisso, ou outras primitivas como autentica\c{c}\~{a}o de mensagens e assinaturas digitais, a partir de passeios qu\^{a}nticos.
+Seguindo a comparação teórica entre OT quântico e clássico, integramos e comparamos ambas as abordagens dentro de um sistema SMC baseado na análise de sequências genéticas. Em resumo, propomos um sistema SMC auxiliado por protocolos criptográficos quânticos com o objectivo de computar uma árvore filogenética a partir de um conjunto de sequências genéticas privadas. Este sistema melhora significativamente a privacidade e a segurança da computação graças a três protocolos criptográficos quânticos que fornecem segurança aprimorada contra ataques de computadores quânticos. Este sistema adapta vários métodos baseados em distância (Unweighted Pair Group Method with Arithmetic Mean (UPGMA), Neighbour-Joining (NJ), Fitch-Margoliash (FM)) num ambiente privado onde as sequências de cada participante não são divulgadas aos demais membros presentes no protocolo. Avaliamos teoricamente as garantias de desempenho e privacidade do sistema através de uma análise de complexidade e prova de segurança, e fornecemos uma extensa explicação dos detalhes de implementação e protocolos criptográficos. Implementamos este sistema com base na implementação Libscapi do protocolo de Yao, na biblioteca PHYLIP e em chaves simuladas de dois sistemas quânticos: distribuição de chaves oblívias quânticas e distribuição de chaves quânticas. Comparamos esta implementação com uma solução somente clássica e concluímos que ambas as abordagens apresentam tempos de execução semelhantes. A única diferença entre os dois sistemas é a sobrecarga de tempo tomada pelo sistema de gestão de chaves oblívias da abordagem quântica.
 
-Na segunda parte da tese, explicamos por que a exist\^{e}ncia ou aus\^{e}ncia de mem\'{o}rias qu\^{a}nticas de longo prazo tem s\'{e}rias implica\c{c}\~{o}es em ambas criptografia cl\'{a}ssica e criptografia qu\^{a}ntica. Assim, estudamos o comportamento, a temperaturas finitas, de sistemas exibindo ordem topol\'{o}gica, que est\~{a}o entre os melhores candidatos para o desenho de mem\'{o}rias qu\^{a}nticas. Estudamos as transi\c{c}\~{o}es de fase de sistemas topol\'{o}gicos a temperaturas finitas recorrendo \'{a} fidelidade, como \'{e} de uso comum, assim como recorrendo a uma quantidade distinta, associada  conex\~{a}o de Uhlmann e a fidelidade via a m\'{e}trica de Bures. Aplicamos esta an\'{a}lise a modelos paradigm\'{a}ticos de insuladores topol\'{o}gicos e supercondutores, e mostramos que as propriedades topol\'{o}gicas presentes a termperatura zero desaparecem gradualmente \'{a} medida que a temperatura aumenta. Analisamos ainda um supercondutor topol\'{o}gico trivial, descrito pela teoria BCS. Contrariamente ao caso do supercondutor topol\'{o}gico, ambas as quantidades indicam a exist\^{e}ncia de transi\c{c}\~{o}es t\'{e}rmicas de fase, j\'{a} que o Hamiltoniano BCS efetivo depende explicitamente da temperatura. Explicamos esta diverg\^{e}ncia comportamental identificando a signific\^{a}ncia das contribui\c{c}\~{o}es t\'{e}rmicas e puramente qu\^{a}nticas para as transi\c{c}\~{o}es de fase. Acreditamos que o nosso estudo, que revela esta diferen\c{c}a e clarifica o porqu\^{e} da sua exist\^{e}ncia, possa ser utilizado para examinar diversas propriedades dos sistemas mencionados em experi\^{e}ncias reais. Confirmamos ainda a aus\^{e}ncia de transi\c{c}\~{o}es t\'{e}rmicas de fase em insuladores topol\'{o}gicos e supercondutores, investigando para isso o comportamento de estados de fronteira.
+Finalmente, apresentamos o primeiro protocolo quântico de  avaliação linear oblívia (\textit{oblivious linear evaluation}, OLE). O OLE é uma generalização do OT, em que dois participantes calculam de forma oblívia uma função linear, $f(x) = ax + b$. Ou seja, cada participante fornece os seus dados de forma privada, a fim de calcular o resultado $f(x)$ que se torna conhecido por apenas um deles. Do ponto de vista estrutural e de segurança, o OLE é fundamental para protocolos SMC baseados em circuitos aritméticos. No caso clássico, sabe-se que o OLE pode ser gerado com base no OT, e as contrapartes quânticas desses protocolos podem, em princípio, ser construídas como extensões directas baseadas em QOT. Aqui, apresentamos o primeiro, protocolo quântico OLE que, além disso, não depende de QOT. Começamos apresentando um protocolo semi-honesto e depois estendemo-lo para o cenário desonesto através de uma estratégia \textit{commit-and-open}. O nosso protocolo usa estados quânticos para calcular a função linear, $f(x)$, em corpos de Galois de dimensão prima, $GF(d)$, ou dimensão de potência prima, $GF(d^M)$. Estas construções utilizam a existência de um conjunto completo de \textit{mutually unbiased bases} em espaços de Hilbert de dimensão de potência prima e o seu comportamento linear sobre os operadores de Heisenberg-Weyl. Também generalizamos o nosso protocolo para obter uma versão vectorial do OLE, onde são geradas várias instâncias de OLE, tornando o protocolo mais eficiente. Provamos que os protocolos têm segurança estática no âmbito da composição universal quântica. Para tal, utilizamos o conceito de \textit{min-entropy} quântica como forma de descrever a quantidade de informação que um agente malicioso Bob tem em relação aos estados quânticos de um agente honesto Alice. A prova de segurança no âmbito da composição universal quântica requer a realização de duas propriedades: indistinguibilidade entre um mundo ideal, onde consta a definição de segurança, e um mundo real, onde é executado o protocolo; a extracção dos \textit{inputs} do agente malicioso. A indistinguibilidade é obtida através da quantificação da \textit{min-entropy} quântica e a extracção dos \textit{inputs} através do acesso à funcionalidade de comprometimento no caso de um Bob malicioso e através do ataque ao protocolo semi-honesto no caso de uma Alice maliciosa.
 
-O estudo dos modos de Majorana (estados de fronteira do supercondutor topol\'{o}gico) a temperatura finita sugere que possam ser realisticamente utilizados para obter mem\'{o}rias qu\^{a}nticas. Assim, uma parte relevante do trabalho futuro ser\'{a} um estudo quantitativo aprofundado robustez destes modos face \'{a} temperatura no m\'{e}todo que propomos.
-
-
-
-Fazemos ainda a mesma an\'{a}lise para os Hamiltonianos efetivos resultantes de passeios qu\^{a}nticos espec\'{i}ficos de uma s\'{o} part\'{i}cula, que se veio a saber recentemente, simularem todas as fases topol\'{o}gicas em uma e duas dimens\~{o}es. Em particular, estudamos representantes de duas classes sim\'{e}tricas de insuladores topol\'{o}gicos e chegamos \'{a} mesma conclus\~{a}o: a temperatura efetiva apenas apaga propriedades topol\'{o}gicas exibidas a temperatura zero, sem causar qualquer transi\c{c}\~{a}o t\'{e}rmica de fase. Para mais, a periodicidade temporal dos protocolos de passeios qu\^{a}nticos revela transi\c{c}\~{o}es param\'{e}tricas de fase a temperatura finita, um comportamento emergente em sistemas peri\'{o}dicos. Fazemos o nosso estudo para estados de Boltzmann-Gibbs com uma s\'{o} part\'{i}cula com respeito ao Hamiltoniano efetivo de passeios qu\^{a}nticos de uma s\'{o} part\'{i}cula, e tamb\'{e}m aos seus an\'{a}logos multi-part\'{i}culas, e mostramos que o seu comportamento \'{e} consistente. Assim, a an\'{a}lise de part\'{i}culas \'{u}nicas pode-se vir a revelar uma ferramenta matem\'{a}tica muito \'{u}til no estudo dos sistemas multi-part\'{i}culas correspondentes. Os par\^{a}metros que descrevem passeios qu\^{a}nticos tamb\^{e}m podem ser facilmente controlados em testes experimentais, oferecendo uma plataforma de simula\c{c}\~{a}o para sistemas topologicamente ordenados. Consequentemente, ser\'{a} interessante estudar os efeitos realistas de ru\'{i}do que possam gerar estes passeios com part\'{i}culas \'{u}nicas em estados de Boltzmann-Gibbs, e utilizar a nossa an\'{a}lise para investigar as propriedades topol\'{o}gicas dessas experi\^{e}ncias a temperaturas finitas.
-
-
-
-Finalmente, estudamos o comportamento da ordem topol\'{o}gica com respeito \'{a} temperatura para sistemas fora de equil\'{i}brio. O protagonista no estudo das transi\c{c}\~{o}es de fase correspondentes para estados puros \'{e} o eco de Loschmidt, para o qual existem v\'{a}rias propostas de generaliza\c{c}\~{a}o para estados mistos: o eco da fidelidade de Loschmidt e o eco interferom\'{e}trico de Loschmidt. Contudo, estas duas quantidades geram previs\~{o}es paradoxais: o eco da fidelidade de Loschmidt n\~{a}o prev\^{e} transi\c{c}\~{o}es de fase a temperatura finita (o que bate certo com o nosso resultado no caso de transi\c{c}\~{o}es topol\'{o}gicas de fase em sistemas em equil\'{i}brio), enquanto que o eco interferom\'{e}trico de Loschmidt mostra a perman\^{e}ncia de transi\c{c}\~{o}es topol\'{o}gicas de fase a temperaturas finitas. De maneira a clarificar a origem desta incongru\^{e}ncia, derivamos analiticamente a forma das suscetibilidades din\^{a}micas associadas. O eco da fidelidade de Loschmidt quantifica o n\'{i}vel de distin\c{c}\~{a}o entre estados em termos de medi\c{c}\~{o}es de propriedades f\'{i}sicas, induzindo uma m\'{e}trica no espa\c{c}o de estados qu\^{a}nticos, enquanto que o eco interferom\'{e}trico de Loschmidt quantifica os efeitos de canais qu\^{a}nticos que agem sobre um estado, induzindo uma m\'{e}trica de pullback sobre o espa\c{c}o dos unit\'{a}rios. Assim, argumentamos que o eco da fidelidade de Loschmidt e a sua suscetibilidade din\^{a}mica associada s\~{a}o uma melhor medida a utilizar no estudo de sistemas multi-part\'{i}culas, enquanto que o caminho interferom\'{e}trico \'{e} prefer\'{i}vel quando se consideram sistemas qu\^{a}nticos genuinamente microsc\'{o}picos. Para mais, experi\^{e}ncias interferom\'{e}tricas involvem a sobreposi\c{c}\~{a}o coerente de dois estados, o que, no caso de sistemas macrosc\'{o}picos multi-part\'{i}culas, \'{e} experimentalmente imposs\'{i}vel de conretizar com a tecnologia atual.
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, passeios qu\^{a}nticos, mem\'{o}rias qu\^{a}nticas, transi\c{c}\~{o}es de fase topol\'{o}gicas, estados de fronteira
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
 \end{flushleft}
 
 
